docs/api/qiskit/0.29/qiskit.opflow.list_ops.SummedOp.mdx
---
title: SummedOp (v0.29)
description: API reference for qiskit.opflow.list_ops.SummedOp in qiskit v0.29
in_page_toc_min_heading_level: 1
python_api_type: class
python_api_name: qiskit.opflow.list_ops.SummedOp
---

# SummedOp

<Class id="qiskit.opflow.list_ops.SummedOp" isDedicatedPage={true} github="https://github.com/qiskit/qiskit/tree/stable/0.18/qiskit/opflow/list_ops/summed_op.py" signature="SummedOp(oplist, coeff=1.0, abelian=False)" modifiers="class">
  Bases: `qiskit.opflow.list_ops.list_op.ListOp`

  A class for lazily representing sums of Operators. Often Operators cannot be efficiently added to one another, but may be manipulated further so that they can be later. This class holds logic to indicate that the Operators in `oplist` are meant to be added together, and therefore if they reach a point in which they can be, such as after evaluation or conversion to matrices, they can be reduced by addition.

  **Parameters**

  *   **oplist** (`List`\[`OperatorBase`]) – The Operators being summed.
  *   **coeff** (`Union`\[`complex`, `ParameterExpression`]) – A coefficient multiplying the operator
  *   **abelian** (`bool`) – Indicates whether the Operators in `oplist` are known to mutually commute.

  ## Methods Defined Here

  <span id="qiskit-opflow-list-ops-summedop-add" />

  ### add

  <Function id="qiskit.opflow.list_ops.SummedOp.add" signature="SummedOp.add(other)">
    Return Operator addition of `self` and `other`, overloaded by `+`.

    <Admonition title="Note" type="note">
      This appends `other` to `self.oplist` without checking `other` is already included or not. If you want to simplify them, please use `simplify()`.
    </Admonition>

    **Parameters**

    **other** (`OperatorBase`) – An `OperatorBase` with the same number of qubits as self, and in the same ‘Operator’, ‘State function’, or ‘Measurement’ category as self (i.e. the same type of underlying function).

    **Return type**

    `SummedOp`

    **Returns**

    A `SummedOp` equivalent to the sum of self and other.
  </Function>

  <span id="qiskit-opflow-list-ops-summedop-collapse-summands" />

  ### collapse\_summands

  <Function id="qiskit.opflow.list_ops.SummedOp.collapse_summands" signature="SummedOp.collapse_summands()">
    Return Operator by simplifying duplicate operators.

    E.g., `SummedOp([2 * X ^ Y, X ^ Y]).collapse_summands() -> SummedOp([3 * X ^ Y])`.

    **Return type**

    `SummedOp`

    **Returns**

    A simplified `SummedOp` equivalent to self.
  </Function>

  <span id="qiskit-opflow-list-ops-summedop-equals" />

  ### equals

  <Function id="qiskit.opflow.list_ops.SummedOp.equals" signature="SummedOp.equals(other)">
    Check if other is equal to self.

    <Admonition title="Note" type="note">
      This is not a mathematical check for equality. If `self` and `other` implement the same operation but differ in the representation (e.g. different type of summands) `equals` will evaluate to `False`.
    </Admonition>

    **Parameters**

    **other** (`OperatorBase`) – The other operator to check for equality.

    **Return type**

    `bool`

    **Returns**

    True, if other and self are equal, otherwise False.

    **Examples**

    ```python
    >>> from qiskit.opflow import X, Z
    >>> 2 * X == X + X
    True
    >>> X + Z == Z + X
    True
    ```
  </Function>

  <span id="qiskit-opflow-list-ops-summedop-reduce" />

  ### reduce

  <Function id="qiskit.opflow.list_ops.SummedOp.reduce" signature="SummedOp.reduce()">
    Try collapsing list or trees of sums.

    Tries to sum up duplicate operators and reduces the operators in the sum.

    **Return type**

    `OperatorBase`

    **Returns**

    A collapsed version of self, if possible.
  </Function>

  <span id="qiskit-opflow-list-ops-summedop-to-circuit" />

  ### to\_circuit

  <Function id="qiskit.opflow.list_ops.SummedOp.to_circuit" signature="SummedOp.to_circuit()">
    Returns the quantum circuit, representing the SummedOp. In the first step, the SummedOp is converted to MatrixOp. This is straightforward for most operators, but it is not supported for operators containing parameterized PrimitiveOps (in that case, OpflowError is raised). In the next step, the MatrixOp representation of SummedOp is converted to circuit. In most cases, if the summands themselves are unitary operators, the SummedOp itself is non-unitary and can not be converted to circuit. In that case, ExtensionError is raised in the underlying modules.

    **Return type**

    `QuantumCircuit`

    **Returns**

    The circuit representation of the summed operator.

    **Raises**

    *   [**OpflowError**](qiskit.opflow.OpflowError "qiskit.opflow.OpflowError") – if SummedOp can not be converted to MatrixOp (e.g. SummedOp is composed of
    *   **parameterized PrimitiveOps**\*\*)\*\*\*\*\*\* –
  </Function>

  <span id="qiskit-opflow-list-ops-summedop-to-matrix-op" />

  ### to\_matrix\_op

  <Function id="qiskit.opflow.list_ops.SummedOp.to_matrix_op" signature="SummedOp.to_matrix_op(massive=False)">
    Returns an equivalent Operator composed of only NumPy-based primitives, such as `MatrixOp` and `VectorStateFn`.

    **Return type**

    `SummedOp`
  </Function>

  <span id="qiskit-opflow-list-ops-summedop-to-pauli-op" />

  ### to\_pauli\_op

  <Function id="qiskit.opflow.list_ops.SummedOp.to_pauli_op" signature="SummedOp.to_pauli_op(massive=False)">
    Returns an equivalent Operator composed of only Pauli-based primitives, such as `PauliOp`.

    **Return type**

    `SummedOp`
  </Function>

  ## Attributes

  ### INDENTATION

  <Attribute id="qiskit.opflow.list_ops.SummedOp.INDENTATION" attributeValue="'  '" />

  ### abelian

  <Attribute id="qiskit.opflow.list_ops.SummedOp.abelian">
    Whether the Operators in `oplist` are known to commute with one another.

    **Return type**

    `bool`

    **Returns**

    A bool indicating whether the `oplist` is Abelian.
  </Attribute>

  ### coeff

  <Attribute id="qiskit.opflow.list_ops.SummedOp.coeff">
    The scalar coefficient multiplying the Operator.

    **Return type**

    `Union`\[`complex`, `ParameterExpression`]

    **Returns**

    The coefficient.
  </Attribute>

  ### combo\_fn

  <Attribute id="qiskit.opflow.list_ops.SummedOp.combo_fn">
    The function defining how to combine `oplist` (or Numbers, or NumPy arrays) to produce the Operator’s underlying function. For example, SummedOp’s combination function is to add all of the Operators in `oplist`.

    **Return type**

    `Callable`

    **Returns**

    The combination function.
  </Attribute>

  ### distributive

  <Attribute id="qiskit.opflow.list_ops.SummedOp.distributive">
    **Return type**

    `bool`
  </Attribute>

  ### grad\_combo\_fn

  <Attribute id="qiskit.opflow.list_ops.SummedOp.grad_combo_fn">
    The gradient of `combo_fn`.

    **Return type**

    `Optional`\[`Callable`]
  </Attribute>

  ### instance\_id

  <Attribute id="qiskit.opflow.list_ops.SummedOp.instance_id">
    Return the unique instance id.

    **Return type**

    `int`
  </Attribute>

  ### num\_qubits

  <Attribute id="qiskit.opflow.list_ops.SummedOp.num_qubits">
    **Return type**

    `int`
  </Attribute>

  ### oplist

  <Attribute id="qiskit.opflow.list_ops.SummedOp.oplist">
    The list of `OperatorBases` defining the underlying function of this Operator.

    **Return type**

    `List`\[`OperatorBase`]

    **Returns**

    The Operators defining the ListOp
  </Attribute>

  ### parameters

  <Attribute id="qiskit.opflow.list_ops.SummedOp.parameters" />

  ### settings

  <Attribute id="qiskit.opflow.list_ops.SummedOp.settings">
    Return settings.

    **Return type**

    `Dict`
  </Attribute>
</Class>

